src/test/ui/borrowck/borrowck-overloaded-index-move-from-vec.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/borrowck-overloaded-index-move-from-vec.rs:30:15
   |
LL |     let bad = v[0];
   |               ^^^^
   |               |
   |               cannot move out of borrowed content
   |               help: consider borrowing here: `&v[0]`

error[E0507]: cannot move out of data in a `&` reference
  --> $DIR/borrowck-overloaded-index-move-from-vec.rs:30:15
   |
LL |     let bad = v[0];
   |               ^^^^
   |               |
   |               cannot move out of data in a `&` reference
   |               cannot move

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
